@@ -1,3 +1,8 @@
+Mon Aug 16 12:08:57 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+
+	* Makefine.am, Makefile.in, installdir/Makefile.am,
+	installdir/Makefile.in: change all remaining INSTALL_ROOT to DESTDIR.
+
 Fri Aug 13 15:44:31 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
 
 	* htdig/PDF.cc(parse): added missing ')' in new code.  Oops!
